--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,9 @@
 <h1>Awesome Products</h1>
 <% @products.each do |product| %>
-  <div class='card-product-infos'>
-    <h2><%= product.name %></h2>
-    <p><%= product.tagline %></p>
+  <div class="card-product">
+    <div class='card-product-infos'>
+      <h2><%= product.name %></h2>
+      <p><%= product.tagline %></p>
+    </div>
   </div>
 <% end %>
